working on table foe the end suggestions

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -16,24 +16,20 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
         2024](#research-questions---march-2024)
         -   [Word count](#word-count)
     -   [Introduction](#introduction)
-    -   [Study of Vignette 2](#study-of-vignette-2)
-        -   [Descriptive Commentary on Vignette
-            2](#descriptive-commentary-on-vignette-2)
+    -   [Initial broad commentary on Vignette
+        2](#initial-broad-commentary-on-vignette-2)
+        -   [Short Descriptive Commentary on Vignette
+            2](#short-descriptive-commentary-on-vignette-2)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-            -   [GDP concepts and language used in informal feedback for
-                peers to influence modification of games (developing
-                community norms)
-                -](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms--)
         -   [GDPs facilitate the use of wider funds of knowledge /
             interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
         -   [Evolution and propagation of GDPs concepts during
             playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
-        -   [Perhaps add here a very brief summary of cultural section
-            if
-            useful](#perhaps-add-here-a-very-brief-summary-of-cultural-section-if-useful)
+        -   [Summary of cultural section - and signposting to next
+            chapter](#summary-of-cultural-section---and-signposting-to-next-chapter)
     -   [GDPs used in the process of guided participation (Target
         2500)](#gdps-used-in-the-process-of-guided-participation-target-2500)
         -   [GDPs and their grouping as a collection or menu of
@@ -65,33 +61,21 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
             Thinking and
             abstraction](#discussion-of-findings-in-relation-to-computational-thinking-and-abstraction)
             -   [Design patterns as a intermediate-level, pedagogical
-                framework](#design-patterns-as-a-intermediate-level-pedagogical-framework)
-            -   [Concrete and relatable levels of abstraction - linking
-                this communities experiences with existing
-                literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature)
-            -   [Synthesis between intermediate and
-                empirical/theoretical
-                perspectives.](#synthesis-between-intermediate-and-empiricaltheoretical-perspectives.)
-        -   [A discussion of aspects of culture, home interests and
-            evolving participation in an
-            idioculture](#a-discussion-of-aspects-of-culture-home-interests-and-evolving-participation-in-an-idioculture)
+                framework compared to computational
+                thinking](#design-patterns-as-a-intermediate-level-pedagogical-framework-compared-to-computational-thinking)
         -   [Implications and beginnings of suggestions for
             practitioners to support inclusive pedagogical approach
             -](#implications-and-beginnings-of-suggestions-for-practitioners-to-support-inclusive-pedagogical-approach--)
-            -   [Returning to some of the tensions explore in the last
-                chapter.](#returning-to-some-of-the-tensions-explore-in-the-last-chapter.)
-            -   [Tensions between facilitating agency and norming
-                practices - REWRITE AS A WAY OF OPENING THIS TOPIC ANDThe following summary list of appendices my help orientate the reader.
-                CLOSING OFF
-                GDPS](#tensions-between-facilitating-agency-and-norming-practices---rewrite-as-a-way-of-opening-this-topic-and-closing-off-gdps)
+            -   [Table of GDP use with supporting
+                evidence](#table-of-gdp-use-with-supporting-evidence)
         -   [Simple table of uses](#simple-table-of-uses)
     -   [Chapter Conclusion](#chapter-conclusion)
-        -   [Summary of the uses of Game Design
-            Patterns](#summary-of-the-uses-of-game-design-patterns)
-        -   [Transition to next chapter](#transition-to-next-chapter)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
             PARTICIPATION](#moved-from-guided-participation)
+        -   [Future work on abstraction, layers of abstraction GDPs and
+            the MDA
+            framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework)
 
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
@@ -702,14 +686,7 @@ Molly: Thanks
 Molly: So am I like back with the black now?
 Nadine : Yeah but if you want to delete it just press X (which switches between foreground and background colours) and then do it.
 Molly: Oh X. Alright Bubs. Thanks. -->
-
-
     <!-- NOTE - this is a secondary examples - where GDPs as a concept are not vital. -->
-
-
-
-
-
 
 While the helping pattern of accessing the repetoire of researching and accessing technical documentation is available to all pairs, due to the level of skill and experience involved, other technical processes are developed by most participants and are explored in the next section.
 
@@ -721,9 +698,6 @@ While the helping pattern of accessing the repetoire of researching and accessin
 
 <!-- Discussion drawing on more radical attempts to describe the best way to bring young learners into a design practice.
 Perhaps in the field of participatory design. -->
-
-
-
 
  <!-- While there was no formal organising of groups in phase 2 and 3, the family bonds between parents and children created similar patterns of seeking validation, sharing planning. Although this was more the case for dyads working side-by-side on the same game, similar patterns existed for other configurations. -->
 
@@ -979,7 +953,6 @@ The following table outlines the principle different uses of GDP in the data ana
 
 It is important to recall the purpose and limitation of these figures outlined in Chapter 4, that this is not designed to claim efficacy of the learning design or to be representative of an average participant (which would require follow up studies of different design).
 <!-- Instead the potential of this learning design is of most value.   -->
-
 
 SUMMARY TABLE HERE -
 https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
