starting to proof read

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -100,7 +100,7 @@ Also work out what to move to Lit Review - and restructure LT and Methodology ba
 - Actual (Target)
 - Intro - 800 - (500)
 - Vignette + Commentary - 600 (1000)
-- Cultural - 2500 (2500)
+- Cultural - 2500 (2500)                      
 - Guided Part - 4,100 (2500)
 - Personal - 650 (750)
 - DISCUSSION - 2300 (2000)
@@ -185,39 +185,24 @@ For the preceding ten minutes, the parent and child dyad had been struggling wit
 <!-- SIGNPOSTING TO DOL & OTHER ASPECTS OF GDP Use -->
 
 
-**Skilful parental work to sustain engagement**
+<!-- **Skilful parental work to sustain engagement** -->
 
-The parent takes action to involve her child in the design process when technically possible and to incorporate her child's interests. The full arc of the vignette, the parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to ask. When the code problem has been solve, she signals clearly to her child to return to the design process. This indicates that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game.
+The parent takes action to involve her child in the design process when technically possible and to incorporate her child's interests. The parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to do so. When the code problem has been solved, she signals  to her child that is her turn to return to the design process. This indicates that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game.
+
+The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. The key and door pattern is relatively technically challenging to implement. Olivia is one of the younger participants and the parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice.
 
 The parent struggles to implement quite ambitious code challenges that she takes on but signals clearly when the process returns to a state suitable for ideation and design within the scope of the child. The completion of a coding task indicating that she is aware of the greater possibility for effective child input at this stage. The parent navigates the process skilfully and is able to elicit and then incorporate the child's interests in a variety of ways.
 
 
-**Challenge and initiative**
+<!-- **Challenge and initiative** -->
+<!-- **Lingua franca** -->
 
-The child also show initiative, in particular in relation to level design. There is an awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level.
-
-
-**Lingua franca**
-
-
-The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging.
-
-The child(c) Olivia uses the name of game design pattern they are working in _Keys and Doors_ in the process of encouraging her parent(p) Suzanna to get started on it (Key 44 in Vignette 2).
-
-The key and door pattern is one of the harder ones to implement. Olivia is one of the younger participants and the parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice.
-
-There is evidence that the Olivia(c) is building a connection to the game making pattern in (Key 12 in Vignette 2) abbreviations of the names of GDPs, _Key and Door_ and _Levels_, are repeated in a sing song voice and the positioning of the Key and Door pattern as a challenging in the session start orientation outlined in Vignette 11 provokes a strong reaction.  
-
-
-**Transition**
-
-The use of GDPs terms  as a lingua franca, a concept underpinning the utility of design pattern more generally [@erickson_lingua_2000], to help design for others is explored in the next section. More broadly the use of GDP concepts as an evolving design language to give feedback, to share knowledge, request and for other uses during community activity,  pair interactions and individual work are explored in following sections.
+The child also show initiative, in particular in relation to level design. There is an awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game. An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The pair use the name of game design patterns they are working on (_Adding Levels_ and  _Keys and Doors_ ) (Key 44 in Vignette 2). There is evidence that the Olivia(c) is building a connection to the game making pattern in (Key 12 in Vignette 2) abbreviations of the names of GDPs, _Key and Door_ and _Levels_, are repeated in a sing song voice and the positioning of the Key and Door pattern as a challenging in the session start orientation outlined in Vignette 11 provokes a strong reaction. The use of GDPs terms as a lingua franca, a concept underpinning the utility of design pattern more generally [@erickson_lingua_2000], to help design for others is explored in the next section. More broadly the use of GDP concepts as an evolving design language to give feedback, to share knowledge, request and for other uses during community activity,  pair interactions and individual work are explored in following sections.
 
 <!-- **Transition**
 
 The interactions outlined in this vignette extract show some of the uses of GDPs as mediating strategies and repertoires of interaction that have emerged. These include x and y - which are explore in the next sections, particularly those a
 ddressing cultural practices and interpersonal /  guided participation. -->
-
 
 <!--
 The supporting resources are available here.
@@ -271,22 +256,17 @@ NOTE #### GDP concepts and language used in informal feedback for peers to influ
 
 **There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
 
-The discussion of game challenge, specifically comments about how 'hard' participant games were a particularly common interaction during playtesting. Vignette.challenge outlines an key interaction which demonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of how a player jumps should feel stemming from the participants feedbcak on the feeling of lack of control over the player's character in the game.
-
-These norming behaviours some of the informal norming behaviours that are less directive seen in the work of Rogoff and colleagues as explored in literature review [@rogoff_cultural_2003].
+The discussion of game challenge, specifically comments about how 'hard' participant games were a particularly common interaction during playtesting. Vignette.challenge outlines an key interaction which demonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of how a player jumps should feel stemming from the participants feedback on the feeling of lack of control over the player's character in the game. These norming behaviours some of the informal norming behaviours that are less directive seen in the work of Rogoff and colleagues as explored in literature review [@rogoff_cultural_2003].
 
 
 <!-- children come and play Molly's game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating."  -->
 
-**Ending / Transition - Other examples and interpretation on designing for others / shifts of perspective**
+<!-- **Ending / Transition - Other examples and interpretation on designing for others / shifts of perspective** -->
 
-Returning to the complexity of Suzanna and Olivia's interaction which involves negotiation over the imagined experience of others involves the use of GDPs concepts.
+Returning to the complexity of Suzanna and Olivia's interaction which involves negotiation over the imagined experience of others involves the use of GDPs concepts. GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game. In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
 
-GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.
-
-In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
-
-Such use was present in 6 of the 12 video capture sessions analysed.
+INSERT VIDEO DATA SUPPORT
+Such use was present in 6 of the 10 video capture sessions analysed.
 
 ### GDPs facilitate the use of wider funds of knowledge / interest
 
@@ -297,22 +277,20 @@ Such use was present in 6 of the 12 video capture sessions analysed.
 One premise driving my exploration in the use of gameplay features as a feature in pedagogy is that the tacit knowledge of gaming conventions of most family members is extensive even if they are not avid gamers due to the extensive influence of video game culture and experience into mainstream culture including contexts of family life [@ito_hanging_2010; @livingstone_digital_2018], in particular retro gaming [@heineman2014public]. As such, the process of facilitating ways of surfacing and working gwith such tacit knowledge aligns with Moll's concept of funds on knowledge, and if aligned, funds of identity [@fasso_identity_2020; @esteban-guitart_funds_2014]. Within a CHAT framework these funds of identity and knowledge can be seen as tools which facilitate the transfer of potentially useful concepts across the boundaries between activity systems, in this case between home activity and that happening in this game making community, with the associated inclusive benefits of working with participants home interests explored by Barron [@barron_conceptualizing_2010; @barron_interest_2006-1] and similar work by Gutiérrez on third spaces [@gutierrez_developing_2008]. Existing research outlines motivations of social making incorporating gaming cultural elements [@ito_hanging_2010; @gee_what_2003] and the ability to make personalised game assets narratives, sustain engagement in digital making projects [@sefton-green_mapping_2013].
 
 In the last chapter I outlined processes facilitating participants could to create and incorporate graphical, audio assets and narratives elements into their games and, referencing Appendix. briefly outlined how these elements were themed as _Game Polish_ items within a typology of GDPs which aligned with the MDA (mechanics, dynamics and aesthetics) game element framework explored in Chapter 2. Addressing the aspect of patterns aesthetics, in Vignette 5 Molly and Nadine showing identification with graphical making process and the process of bringing it the game. Beyond their internal family interaction, they share this artistic flair and attention to detail into the emerging learning community.
-EXTEND OR SIGNPOST - ADD TO APPENDIX COMMENTARY  - CHECK WITH NEXT CHAPTER.
+
+<!-- EXTEND OR SIGNPOST - ADD TO APPENDIX COMMENTARY  - CHECK WITH NEXT CHAPTER. -->
 
 In addition to issues of aesthetics explored in the section above, home knowledge game mechanics and dynamics, the M and D of the MDA framework also contributed to emerging cultural repertoires. Addressing experiences of game dynamics, as explored in the previous section, Vignette 4 gives several examples of how feedback of participants on the dynamics of Molly's game during playtesting. Turning to game mechanics, in part two of Vignette 7, Bertie comments on Toby's game which has a dominant game experience of timed jumping: _"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"_. Parkour in Minecraft and Wipe out are both game experiences whose main gameplay mechanic is about judging jumps to landing accurately. Bertie makes links to his existing experience of games making comparisons between Toby's game, commercial games and his own. In doing so Bertie is able to shows his knowledge and analysis of gameplay patterns.
 
-The different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed a choice over participant making paths, allowing an alignment with home interests.
+The different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed a choice over participant making paths, allowing an alignment with home interests. While this study is exploratory, and not designed to be representational, observations from video data in this study supports existing research on use of funds of knowledge and interest in digital projects as motivating and as a way to overcome barriers to alien cultures [@gutierrez_learning_2019-1].
 
+SUPPORTING DATA FROM VIDEO ANALYSIS
 
-A wider exploration of use of FOK in the programme related to art and narrative is explored in chapter six.
-IS THIS NOW REALLY NEED - OR MOVE TO APPENDIX?  
+<!-- A wider exploration of use of FOK in the programme related to art and narrative is explored in chapter six.
+IS THIS NOW REALLY NEED - OR MOVE TO APPENDIX?   -->
 
-
-_Summary_
-LINK TO STATS from coding.
-
-While this study is exploratory, and not designed to be representational, observations from video data in this study supports existing research on use of FoK FoI in digital projects as motivating and as a way to ovecome barriers to alien cultures [].
-
+<!-- _Summary_
+LINK TO STATS from coding. -->
 
 <!-- _Funds of knowledge from professional communities_
 
@@ -320,8 +298,6 @@ DROP? MENTION IF USEFUL
 A potential similar specialism was evident from Dave's guidance of Toby to access professional documentation, and engage in debugging processes using the developer tools section of the web browser. (See appendix 5.x). As a facilitator, this aligned with my previous work with Mozilla web clubs. The enthusiastic sharing of for messing around with technical web tools for learning and fun.
 
 This could have been picked up on and integrated into the design. While I did not do this, the confidence brought to the process to find resources from outside of teh walled garden of the provided resources prompted a change of game paradigm for another family who also made a top down / maze game in P3. -->
-
-
 
 <!-- In addition to the previous chapters observations....
 ADD IF RELEVANT - research on funds of knowledge motives or benefits of this behaviour may include: ... -->
