--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -662,7 +662,8 @@ Molly: Thanks
 Molly: So am I like back with the black now?
 Nadine : Yeah but if you want to delete it just press X (which switches between foreground and background colours) and then do it.
 Molly: Oh X. Alright Bubs. Thanks. -->
-    <!-- NOTE - this is a secondary examples - where GDPs as a concept are not vital. -->
+
+<!-- NOTE - this is a secondary examples - where GDPs as a concept are not vital. -->
 
 While the helping pattern of accessing the repetoire of researching and accessing technical documentation is available to all pairs, due to the level of skill and experience involved, other technical processes are developed by most participants and are explored in the next section.
 
@@ -976,21 +977,14 @@ The use of GDP concepts can create a tangible link between concrete player exper
 
 GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_  The utility of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants  is shown in part by in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups.
 
-**Theoretical**
-(On a theoretical plane,)This chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared.
-
-CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015] & guitierez?.  
-These concepts and this framing of learning as participation in community repertoires, is explored in the next chapter with examples that extend beyond the use of GDPs to other cultural processes.
+<!-- **Theoretical** -->
+On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. These concepts and this framing of learning as participation in community repertoires, are explored in the next chapter in relation to participant agency using examples that extend beyond the use of GDPs to other cultural processes.
 
 **Transition to next chapter on agency**
 
-Similarly, while the development of agency has not been the primary focus of this chapter, this processes can be directly linked to Sannino conception of transformative agency through double stimulation (TADS).
+While the development of agency has not been the primary focus of this chapter, the processes of community adaptation of GDP use can be directly linked to Sannino conception of transformative agency through double stimulation (TADS).
 
-The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
-
-The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this design by primarily focusing on a drama process as a lens for analysis.
-
-
+The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this design by focusing on a drama process as a lens for analysis.
 
 
 <!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
